Adding emails, deleting members and reseting password
